infl-642abe5be15a6c569a6b8514.tf
resource "aws_security_group" "k8s-iaccode-iaccoded-c5c33bcaed-052" {
  description = "[k8s] Managed SecurityGroup for LoadBalancer"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    protocol    = "tcp"
    to_port     = 443
  }
  name = "k8s-iaccode-iaccoded-c5c33bcaed"
  tags = {
    "elbv2.k8s.aws/cluster"    = "dev-init"
    "ingress.k8s.aws/resource" = "ManagedLBSecurityGroup"
    "ingress.k8s.aws/stack"    = "iac-code/iac-code-deleter-ingress"
  }
  vpc_id = "vpc-0bb7435a6a7f15e26"
}




resource "aws_security_group" "k8s-iaccode-iaccoded-b365a797c1-d24" {
  description = "[k8s] Managed SecurityGroup for LoadBalancer"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    protocol    = "tcp"
    to_port     = 443
  }
  name = "k8s-iaccode-iaccoded-b365a797c1"
  tags = {
    "elbv2.k8s.aws/cluster"    = "stag-init"
    "ingress.k8s.aws/resource" = "ManagedLBSecurityGroup"
    "ingress.k8s.aws/stack"    = "iac-code/iac-code-deleter-ingress"
  }
  vpc_id = "vpc-08f6ecf508dd3bf50"
}
